// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SuccessfullyPaymentCard should render card details successfully 1`] = `
<div
  class="flex flex-col bg-white rounded-lg border border-stone-300 w-full gap-2 pt-4 pb-6 px-6 items-center"
>
  <h1
    class="text-black text-[1.375rem] font-normal leading-7"
  >
    Compra efetuada com sucesso
  </h1>
  <p
    class="text-neutral-600 text-base"
  >
    ****.****.****.1234
  </p>
  <p
    class="text-neutral-600 text-base"
  >
    John Doe
  </p>
  <p
    class="text-neutral-600 text-base"
  >
    12/2021
  </p>
</div>
`;

exports[`SuccessfullyPaymentCard should render successfully 1`] = `
<div
  class="flex flex-col bg-white rounded-lg border border-stone-300 w-full gap-2 pt-4 pb-6 px-6 items-center"
>
  <h1
    class="text-black text-[1.375rem] font-normal leading-7"
  >
    Compra efetuada com sucesso
  </h1>
  <p
    class="text-neutral-600 text-base"
  />
  <p
    class="text-neutral-600 text-base"
  />
  <p
    class="text-neutral-600 text-base"
  />
</div>
`;
